--- a/package.json
+++ b/package.json
@@ -17,13 +17,23 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.42",
+    "@langchain/langgraph": "^0.2.55",
+    "@langchain/openai": "^0.4.4",
     "@privy-io/react-auth": "^2.6.2",
+    "@pythnetwork/client": "^2.22.1",
+    "@pythnetwork/hermes-client": "^2.0.0",
+    "@pythnetwork/pyth-solana-receiver": "^0.10.0",
+    "@solana/web3.js": "^1.98.0",
+    "ai": "^4.1.61",
+    "bs58": "^6.0.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "solana-agent-kit": "^1.4.9",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
