--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "rpc-websockets": "^10.0.0",
     "solana-agent-kit": "^1.4.9",
     "tailwind-merge": "^2.2.1",
+    "ws": "^8.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -60,5 +62,10 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "rpc-websockets": "7.5.1",
+    "@solana/web3.js": "1.77.3",
+    "jito-ts": "2.2.0"
   }
 }
