--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
     "@langchain/openai": "^0.4.4",
+    "@prisma/client": "6.5.0",
     "@privy-io/react-auth": "^2.6.2",
     "@pythnetwork/client": "^2.22.1",
     "@pythnetwork/hermes-client": "^2.0.0",
@@ -30,6 +31,7 @@
     "ai": "^4.1.61",
     "bs58": "^6.0.0",
     "clsx": "^2.1.0",
+    "express": "^4.21.2",
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
@@ -46,6 +48,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.0",
+    "@types/express": "^5.0.0",
     "@types/react": "^18.2.55",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -60,9 +63,11 @@
     "jest": "^29.7.0",
     "next-router-mock": "^0.9.10",
     "next-sitemap": "^4.2.3",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
