--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.2.5",
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
     "@langchain/openai": "^0.4.4",
@@ -31,6 +32,7 @@
     "ai": "^4.1.61",
     "bs58": "^6.0.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
