--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.5",
+    "@ai-sdk/react": "^1.1.23",
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
     "@langchain/openai": "^0.4.4",
