--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,31 @@
         }
       ]
     }
-  ]
+  ],
+  "buildCommand": "pnpm run build",
+  "installCommand": "pnpm install",
+  "framework": "nextjs",
+  "outputDirectory": ".next",
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    }
+  ],
+  "env": {
+    "NEXT_PHASE": "phase-production-build",
+    "NODE_ENV": "production",
+    "NEXT_PUBLIC_VERCEL_ENV": "production"
+  },
+  "build": {
+    "env": {
+      "NEXT_PHASE": "phase-production-build",
+      "NODE_ENV": "production",
+      "NEXT_PUBLIC_VERCEL_ENV": "production"
+    }
+  }
 }
